--- a/app/src/main/res/layout/a1_reservations.xml
+++ b/app/src/main/res/layout/a1_reservations.xml
@@ -1,6 +1,7 @@
-<?xml version="1.0" encoding="utf-8"?>
+<!-- app/src/main/res/layout/a1_reservations.xml -->
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="100dp">
 
@@ -15,33 +16,47 @@
 
     <TextView
         android:id="@+id/restaurant_name"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_width="113dp"
+        android:layout_height="27dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginTop="8dp"
         android:text="Restaurant"
         android:textSize="20sp"
         app:layout_constraintStart_toEndOf="@id/thumbnail"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/a1_time"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="42dp"
+        android:layout_marginTop="8dp"
+        android:text="00:00"
+        android:textSize="16sp"
+        app:layout_constraintStart_toEndOf="@+id/restaurant_name"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/a1_date"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="18dp"
+        android:layout_marginTop="8dp"
+        android:text="2024-06-01"
+        android:textSize="16sp"
+        app:layout_constraintStart_toEndOf="@+id/a1_time"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/a1_people"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="12dp"
-        android:layout_marginTop="8dp"/>
-
-    <TextView
-        android:id="@+id/restaurant_type"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="Type"
+        android:layout_marginTop="8dp"
+        android:text="People: 4"
+        android:textSize="16sp"
         app:layout_constraintStart_toEndOf="@id/thumbnail"
-        app:layout_constraintTop_toBottomOf="@id/restaurant_name"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginStart="12dp"/>
+        app:layout_constraintTop_toBottomOf="@id/a1_time" />
 
-    <TextView
-        android:id="@+id/restaurant_location"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="Location"
-        app:layout_constraintStart_toEndOf="@id/thumbnail"
-        app:layout_constraintTop_toBottomOf="@id/restaurant_type"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginStart="12dp"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
