--- a/app/src/main/res/layout/activity0.xml
+++ b/app/src/main/res/layout/activity0.xml
@@ -93,7 +93,7 @@
         app:layout_constraintTop_toBottomOf="@+id/userID" />
 
     <Button
-        android:id="@+id/login"
+        android:id="@+id/reserve"
         android:layout_width="377dp"
         android:layout_height="55dp"
         android:layout_marginStart="16dp"
