--- a/app/src/main/res/layout/activity2.xml
+++ b/app/src/main/res/layout/activity2.xml
@@ -22,6 +22,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ListView
+        android:id="@+id/a2_reservations"
         android:layout_width="314dp"
         android:layout_height="593dp"
         android:layout_marginStart="24dp"
