--- a/app/src/main/res/layout/activity3.xml
+++ b/app/src/main/res/layout/activity3.xml
@@ -26,7 +26,7 @@
         android:layout_marginStart="24dp"
         android:layout_marginTop="13dp"
         android:layout_marginEnd="24dp"
-        android:text="Details"
+        android:text="placeholder"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/a3_figure" />
