--- a/app/src/main/res/layout/activity5.xml
+++ b/app/src/main/res/layout/activity5.xml
@@ -73,7 +73,7 @@
         app:layout_constraintTop_toBottomOf="@+id/a5_time" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/a5_cancel"
         android:layout_width="164dp"
         android:layout_height="89dp"
         android:layout_marginStart="24dp"
@@ -81,11 +81,11 @@
         android:layout_marginBottom="38dp"
         android:text="cancel"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/button3"
+        app:layout_constraintEnd_toStartOf="@+id/a5_confirm"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/a5_confirm"
         android:layout_width="164dp"
         android:layout_height="89dp"
         android:layout_marginStart="11dp"
@@ -94,5 +94,5 @@
         android:text="confirm"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/button2" />
+        app:layout_constraintStart_toEndOf="@+id/a5_cancel" />
 </androidx.constraintlayout.widget.ConstraintLayout>
