--- a/app/src/main/res/layout/activity6.xml
+++ b/app/src/main/res/layout/activity6.xml
@@ -13,65 +13,85 @@
         android:layout_height="83dp"
         android:layout_marginStart="24dp"
         android:layout_marginEnd="11dp"
+        android:layout_marginBottom="44dp"
         android:text="cancel"
-        app:layout_constraintEnd_toStartOf="@+id/button3"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="604dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/a5_confirm"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
+        android:layout_marginTop="12dp"
         android:text="Restaurant Name"
         android:textSize="24sp"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="12dp" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/a6_people"
         android:layout_width="349dp"
         android:layout_height="41dp"
         android:layout_marginStart="24dp"
+        android:layout_marginTop="27dp"
+        android:layout_marginEnd="24dp"
         android:text="People: num"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="260dp" />
+        app:layout_constraintTop_toBottomOf="@+id/a6_reserve_title" />
 
     <TextView
         android:id="@+id/a6_date"
         android:layout_width="351dp"
         android:layout_height="47dp"
         android:layout_marginStart="24dp"
+        android:layout_marginTop="29dp"
+        android:layout_marginEnd="36dp"
+        android:layout_marginBottom="77dp"
         android:text="Dates: 00/00/00"
+        app:layout_constraintBottom_toTopOf="@+id/a6_time"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="330dp" />
+        app:layout_constraintTop_toBottomOf="@+id/a6_people" />
 
     <TextView
         android:id="@+id/a6_time"
         android:layout_width="355dp"
         android:layout_height="31dp"
         android:layout_marginStart="24dp"
+        android:layout_marginTop="77dp"
+        android:layout_marginEnd="32dp"
         android:text="Times: 00:00"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="454dp" />
+        app:layout_constraintTop_toBottomOf="@+id/a6_date" />
 
     <ImageView
         android:id="@+id/a6_figure"
         android:layout_width="349dp"
         android:layout_height="100dp"
-        app:srcCompat="@drawable/ic_launcher_background"
-        tools:layout_editor_absoluteX="24dp"
-        tools:layout_editor_absoluteY="63dp" />
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="19dp"
+        android:layout_marginEnd="24dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView"
+        app:srcCompat="@drawable/ic_launcher_background" />
 
     <TextView
         android:id="@+id/a6_reserve_title"
         android:layout_width="341dp"
         android:layout_height="51dp"
         android:layout_marginStart="24dp"
+        android:layout_marginTop="18dp"
+        android:layout_marginEnd="24dp"
         android:text="My Reservation"
         android:textAlignment="center"
         android:textSize="24sp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="182dp" />
+        app:layout_constraintTop_toBottomOf="@+id/a6_figure" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
