--- a/app/src/main/res/layout/activity0.xml
+++ b/app/src/main/res/layout/activity0.xml
@@ -28,10 +28,12 @@
         android:layout_height="28dp"
         android:layout_marginStart="24dp"
         android:layout_marginTop="16dp"
+        android:layout_marginEnd="24dp"
         android:layout_marginBottom="14dp"
         android:text="SKKU Catch"
         android:textAlignment="center"
         app:layout_constraintBottom_toTopOf="@+id/submit_info"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/a1_figure" />
 
@@ -41,8 +43,10 @@
         android:layout_height="28dp"
         android:layout_marginStart="24dp"
         android:layout_marginTop="1dp"
+        android:layout_marginEnd="24dp"
         android:text="2020315118 Min Gyu Kang"
         android:textAlignment="center"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/a1_user" />
 
@@ -53,8 +57,8 @@
         android:layout_marginStart="24dp"
         android:layout_marginTop="21dp"
         android:ems="10"
+        android:hint="ID"
         android:inputType="text"
-        android:text="ID"
         android:textAlignment="viewEnd"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/id" />
@@ -66,11 +70,11 @@
         android:layout_marginStart="24dp"
         android:layout_marginTop="16dp"
         android:ems="10"
+        android:hint="Password"
         android:inputType="text"
-        android:text="Password"
         android:textAlignment="viewEnd"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        app:layout_constraintTop_toBottomOf="@+id/pw" />
 
     <TextView
         android:id="@+id/id"
@@ -83,7 +87,7 @@
         app:layout_constraintTop_toBottomOf="@+id/submit_info" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/pw"
         android:layout_width="70dp"
         android:layout_height="27dp"
         android:layout_marginStart="24dp"
