Refactor reservation layouts and enhance activity logic for restaurant details and reservations basic functionalities from activity0~activity6 finished. Need to check if user_info.txt is properly adding reserved info
Signed-off-by: Min0Gyu0Kang <myname@g.skku.edu>

--- a/app/src/main/res/layout/activity1.xml
+++ b/app/src/main/res/layout/activity1.xml
@@ -15,7 +15,7 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="24dp"
         android:layout_marginBottom="33dp"
-        android:src="@drawable/ic_launcher_background"
+        android:src="@drawable/a1_logo"
         app:layout_constraintBottom_toTopOf="@+id/a1_user"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -54,7 +54,7 @@
         android:layout_height="357dp"
         android:layout_marginStart="24dp"
         android:layout_marginTop="35dp"
-        android:layout_marginEnd="24dp"
+        android:layout_marginEnd="32dp"
         android:layout_marginBottom="34dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
