--- a/app/src/main/res/layout/a1_reservations.xml
+++ b/app/src/main/res/layout/a1_reservations.xml
@@ -2,17 +2,17 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="100dp">
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
 
     <ImageView
         android:id="@+id/thumbnail"
         android:layout_width="80dp"
         android:layout_height="80dp"
         android:layout_marginStart="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/restaurant_name"
@@ -29,7 +29,7 @@
         android:id="@+id/a1_time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="42dp"
+        android:layout_marginStart="32dp"
         android:layout_marginTop="8dp"
         android:text="00:00"
         android:textSize="16sp"
@@ -42,8 +42,10 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="18dp"
         android:layout_marginTop="8dp"
+        android:layout_marginEnd="16dp"
         android:text="2024-06-01"
         android:textSize="16sp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/a1_time"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -55,8 +57,8 @@
         android:layout_marginTop="8dp"
         android:text="People: 4"
         android:textSize="16sp"
-        app:layout_constraintStart_toEndOf="@id/thumbnail"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/thumbnail"
         app:layout_constraintTop_toBottomOf="@id/a1_time" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
