--- a/app/src/main/res/layout/a2_reservations.xml
+++ b/app/src/main/res/layout/a2_reservations.xml
@@ -16,8 +16,8 @@
 
     <TextView
         android:id="@+id/a2_restaurant_name"
-        android:layout_width="182dp"
-        android:layout_height="35dp"
+        android:layout_width="149dp"
+        android:layout_height="36dp"
         android:layout_marginStart="12dp"
         android:layout_marginTop="8dp"
         android:text="Restaurant"
@@ -40,11 +40,12 @@
 
     <TextView
         android:id="@+id/a2_location_rating"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_width="276dp"
+        android:layout_height="36dp"
         android:layout_marginStart="12dp"
         android:text="Location/Rating"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@id/a2_thumbnail"
         app:layout_constraintTop_toBottomOf="@id/a2_open_close" />
 </androidx.constraintlayout.widget.ConstraintLayout>
