--- a/app/src/main/res/layout/activity3.xml
+++ b/app/src/main/res/layout/activity3.xml
@@ -17,16 +17,16 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_launcher_background" />
+        app:srcCompat="@drawable/burgerking_thumbnail" />
 
-    <TextView
-        android:id="@+id/details"
+    <include
+        android:id="@+id/a3_details"
+        layout="@layout/a3_details"
         android:layout_width="361dp"
         android:layout_height="183dp"
         android:layout_marginStart="24dp"
         android:layout_marginTop="13dp"
         android:layout_marginEnd="24dp"
-        android:text="placeholder"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/a3_figure" />
@@ -40,7 +40,7 @@
         android:layout_marginEnd="24dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/details" />
+        app:layout_constraintTop_toBottomOf="@id/a3_details" />
 
     <Button
         android:id="@+id/a3_reservation"
@@ -54,4 +54,5 @@
         app:layout_constraintHorizontal_bias="0.727"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/a3_list" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
